create signin link on navigation

--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -69,6 +69,13 @@
       >
         Sign Out
       </button>
+      {{else}}
+      <a
+        href="/signin"
+        class="ml-auto border-red-400 text-xl font-bold duration-75 hover:border-b-4"
+      >
+        Sign In
+      </a>
       {{/if}}
     </nav>
     {{/not}}
